--- a/certification-projects/palindrome-checker/styles.css
+++ b/certification-projects/palindrome-checker/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #0a0a23;
+    background-color: #1b1b32;
     color: #ffffff;
     font-family: 'Lato', sans-serif;
     font-size: 18px;
