--- a/course-projects/role-playing-game/styles.css
+++ b/course-projects/role-playing-game/styles.css
@@ -1,5 +1,11 @@
 body {
-    background-color: #0a0a23;
+    background-color: #1b1b32;
+    padding: 2rem 1rem;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
   }
   
   #text {
@@ -10,10 +16,8 @@ body {
   
   #game {
     max-width: 500px;
-    max-height: 400px;
     background-color: #ffffff;
     color: #ffffff;
-    margin: 30px auto 0px;
     padding: 10px;
   }
   
