--- a/certification-projects/cash-register/styles.css
+++ b/certification-projects/cash-register/styles.css
@@ -6,8 +6,10 @@
 body{
     background: rgb(60, 60, 60);
     color: white;
+    font-family: monospace;
 }
 .main-container{
+    padding:5rem 0;
     max-width: 1300px;
     width: 90%;
     min-height: 100vh;
@@ -15,6 +17,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0 auto;
 }
 h1{
     font-size: 3rem;
@@ -23,5 +26,83 @@ h1{
 #change-due{
     background: black;
     border: 3px solid gray;
+    padding: 0.5rem .5rem;
+}
+.input-div{
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    background: gray;
+    margin: 1rem 0;
+    align-items: center;
+    border:3px solid black;
+    & label{
+        text-align: center;
+        margin-bottom: 0.3rem;
+    }
+    & input{
+        outline: none;
+        margin-bottom: 0.3rem;
+        padding: 0.2rem 0.7rem;
+        max-width: 70%;
+    }
+    & button{
+        width: fit-content;
+        color: white;
+        padding: 0.2rem 0.7rem;
+        background: rgb(43, 148, 241);
+        border: none;
+    }
+
+}
+.top-display-screen-container{
+    border: 3px solid black;
+    width: fit-content;
+}
+.top-display-screen-container >p{
+   color:rgb(72, 255, 0);
+   background-color: black;
+   padding:0.5rem 1rem;
+   width: max-content;
+   border: 0.3rem solid gray;
+}
+.block{
+    height: 1rem;
+    width: 2rem;
+    background-color: gray;
+    border-left:3px solid black;
+    border-right:3px solid black;
+    margin-left: 1rem;
+}
+
+.top-register{
+    background: gray;
+    border: 3px solid black;
+    display: flex;
+    & .cash-drawer-buttons{
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        height: fit-content;
+        padding: 1rem;
+        gap: 0.2rem;
+        & button{
+            width: 1.5rem;
+            height: 1.5rem;
+            background: rgb(43, 148, 241);
+            outline: none;
+            border: none;
+            border: 1px solid;
+            border-radius: 0.2rem;
+
+        }
+
+    
+    }
+    & .cash-drawer-display{
+        padding: 1rem;
+        background:white;
+        color: black;
+    }
+
 }
 
