--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,10 @@ header {
   text-align: center;
   padding: 2rem 1rem;
   font-family: var(--primary-font);
+  text-transform: uppercase;
+  & span{
+    text-transform: none;
+  }
 }
 
 main {
@@ -55,6 +59,7 @@ main {
   text-align: center;
   margin-bottom: 3rem;
   font-family: var(--primary-font);
+  font-size: 2rem;
 }
 .section-container ul {
   display: flex;
@@ -68,12 +73,29 @@ main {
   color: white;
   padding: 1rem 1.5rem;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   font-family: var(--secondary-font);
   font-weight: bold;
-  transition: box-shadow 0.2s ease-in-out;
+  font-size: 1.5rem;
+  transition: box-shadow, background 0.2s ease-in-out;
+}
+.section-container ul li a i {
+ margin-right: 2rem;
 }
 
+
 .section-container ul li a:hover {
+  color:var(--fcc-blue);
+  background: white;
+
   box-shadow: 0px 0px 2px 1px white;
+}
+
+.footer{
+  background: var(--dark-blue);
+  color: white;
+  font-family: var(--primary-font);
+  padding:3rem 0;
+  text-align: center;
+  font-size: 1.3rem;
 }
